--- a/animators/index.html
+++ b/animators/index.html
@@ -461,7 +461,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -472,7 +472,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -483,7 +483,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -494,7 +494,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -505,7 +505,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -516,7 +516,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -527,7 +527,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                         <div class="section__card">
                             <div class="section__card-wrap">
@@ -538,7 +538,7 @@
                                     <h4 class="section__card-price">1990 р</h4>
                                 </div>
                             </div>
-                            <a href="/animators/bundles.html" class="section__card-button button small-btn yellow-btn">подробнее</a>
+                            <a href="#" class="section__card-button button small-btn yellow-btn open__popup">подробнее</a>
                         </div>
                     </div>
                     <div class="section__online">
@@ -764,6 +764,7 @@
         <section class="section gifts">
             <div class="container">
                 <div class="section__wrap">
+                    <img class="show__bg" src="img/show-bg-min.png" alt="">
                     <div class="section__title">
                         <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r-min.png" alt="Фон">
                         <div class="section__titles white">
@@ -870,7 +871,6 @@
                             <h2 class="yellow">Незабываемое шоу</h2>
                         </div>
                     </div>
-                    <img class="show__bg" src="img/show-bg-min.png" alt="">
                     <div class="show-slider" data-mobile="false">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -1315,6 +1315,79 @@
             </div>
         </div>
     </footer>
+    <div class="popup popup__bundle">
+        <div class="popup popup__bundle-body">
+            <div class="popup__bundle-slider-wrap">
+                <a href="#" class="swiper-btn popup__bundle-prev"><img src="img/slider-arrow-l-min.png" alt="Стрелка слайдера"></a>
+                <a href="#" class="swiper-btn popup__bundle-next"><img src="img/slider-arrow-r-min.png" alt="Стрелка слайдера"></a>
+                <div class="popup__bundle-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/photo1-min.png" alt="фото">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/photo2-min.png" alt="фото">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/photo3-min.png" alt="фото">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/photo4-min.png" alt="фото">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/photo5-min.png" alt="фото">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="popup__bundle-container">
+                <img src="img/tiny-hat.png" alt="Фоновая иконка" class="popup__bundle-item1">
+                <img src="img/blue-baloon-min.png" alt="Фоновая иконка" class="popup__bundle-item2">
+                <img src="img/q2-min.png" alt="Фоновая иконка" class="popup__bundle-item3">
+                <img src="img/d5-min.png" alt="Фоновая иконка" class="popup__bundle-item4">
+                <img src="img/d7-min.png" alt="Фоновая иконка" class="popup__bundle-item5">
+                <div class="section__title">
+                    <div class="section__titles brown">
+                        <h2>один аниматор на 1.5 часа</h2>
+                    </div>
+                </div>
+                <div class="popup__bundle-content">
+                    <div class="popup__bundle-head">
+                        <ul class="popup__bundle-keys">
+                            <li>Количество участников: 1</li>
+                            <li>Количество участников: неограниченно</li>
+                            <li>Количество участников: неограниченно</li>
+                        </ul>
+                        <div class="popup__bundle-price">
+                            <h4 class="popup__bundle-old">1700 p</h4>
+                            <h4 class="popup__bundle-new">1500 p</h4>
+                        </div>
+                    </div>
+                    <div class="format__item-body">
+                        <h4 class="format__item-includes popup__bundle-includes">В программу входят:</h4>
+                        <ul class="format__item-list popup__bundle-list">
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                            <li>Зажигательные танец и игра;</li>
+                        </ul>
+                    </div>
+                    <form class="format__item-form">
+                        <h4 class="format__item-includes popup__bundle-includes">Хочу такую программу!</h4>
+                        <div class="format__item-inputs">
+                            <input class="format__item-input" placeholder="Имя" type="text">
+                            <input class="format__item-input" placeholder="Телефон" type="tel">
+                        </div>
+                        <button type="submit" class="button small-btn violet-btn">Заказать праздник</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="popup popup__wrap">
         <div class="popup popup__thx">
             <img src="img/popup__garland-min.png" alt="Фон" class="popup__garland">
