--- a/animators/animators.html
+++ b/animators/animators.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <section class="section celebration">
-            <img src="img/celebration-prev-min.png" alt="Фото в верху" class="celebration__preview">
+            <img src="img/celebration-prev-min.jpg" alt="Фото в верху" class="celebration__preview">
             <div class="celebration__body">
                 <img class="celebration__body-bg" src="img/celebration-bg-min.png" alt="Фон">
             <img class="animators-bg" src="img/celebration-bg2-min.png" alt="">
