--- a/animators/blog_page.html
+++ b/animators/blog_page.html
@@ -88,7 +88,7 @@
             <img src="img/confeti1-min.png"class="blog__item5" alt="Фон">
             <img src="img/confeti2-min.png"class="blog__item6" alt="Фон">
             <div class="blog__img-wrap">
-                <img src="img/blog-img-min.png" alt="Изображение записи" class="blog__img">
+                <img src="img/blog-img-min.jpg" alt="Изображение записи" class="blog__img">
             </div>
             <div class="container">
                 <div class="blog__wrap">
