--- a/animators/celebration.html
+++ b/animators/celebration.html
@@ -85,7 +85,7 @@
         </section>
         <section class="celebration">
             <img src="img/popup__like-min.png" alt="Иконка" class="celebration__bg-item-like celebration__item_1">
-            <img src="img/celebration-prev-min.png" alt="Фото в верху" class="celebration__preview">
+            <img src="img/celebration-prev-min.jpg" alt="Фото в верху" class="celebration__preview">
             <div class="celebration__body">
                 <img class="celebration__body-bg" src="img/celebration-bg-min.png" alt="Фон">
                 <img src="img/hat-min.png" alt="Иконка" class="celebration__bg-item celebration__item_2">
