--- a/animators/index.html
+++ b/animators/index.html
@@ -74,7 +74,7 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <div class="slide">
-                    <img src="img/big-bg-min.png" alt="Фон слайдера">
+                    <img src="img/big-bg-min.jpg" alt="Фон слайдера">
                     <div class="big-slider__gradient"></div>
                     <div class="slide__wrap">
                         <div class="container">
@@ -92,7 +92,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="slide">
-                    <img src="img/big2-bg-min.png" alt="Фон слайдера">
+                    <img src="img/big2-bg-min.jpg" alt="Фон слайдера">
                     <div class="big-slider__gradient"></div>
                     <div class="slide__wrap">
                         <div class="container">
@@ -110,7 +110,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="slide">
-                    <img src="img/big3-bg-min.png" alt="Фон слайдера">
+                    <img src="img/big3-bg-min.jpg" alt="Фон слайдера">
                     <div class="big-slider__gradient"></div>
                     <div class="slide__wrap">
                         <div class="container">
