--- a/animators/index.html
+++ b/animators/index.html
@@ -1240,7 +1240,7 @@
             </div>
         </section>
         <section class="section services">
-            <img class="services__bg" src="img/gifts-bg-min.jpg" alt="Фон">
+            <img class="services__bg" src="img/gifts-bg-min.png" alt="Фон">
             <img class="services__bg services__confeti" src="img/confeti-min.png" alt="Фон">
             <div class="container">
                 <div class="section__wrap">
