--- a/animators/index.html
+++ b/animators/index.html
@@ -286,6 +286,7 @@
             </div>
         </section>
         <section class="section section_purple">
+            <img class="section__animate section__item9" src="img/hat-a.png" alt="">
             <div class="container">
                 <div class="section__wrap">
                     <div class="section__title">
@@ -443,6 +444,8 @@
             <img class="animators-bg" src="img/animators-bg-min.png" alt="">
             <div class="container">
                 <div class="section__wrap">
+                    <img class="animators-item animators-item1" src="img/baloon.png" alt="">
+                    <img class="animators-item animators-item2" src="img/baloons.png" alt="">
                     <div class="section__title">
                         <div class="section__titles violet">
                             <img class="section__title-bg section__drop section__drop-l" src="img/drop-l-min.png" alt="Фон">
@@ -609,6 +612,8 @@
             <img class="programs__bg" src="img/programs-bg-min.png" alt="Фон">
             <div class="container">
                 <div class="section__wrap">
+                    <img class="programs__item programs__item1" src="img/baloon.png" alt="Фон">
+                    <img class="programs__item programs__item2" src="img/baloons2.png" alt="Фон">
                     <div class="section__title">
                         <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r-min.png" alt="Фон">
                         <div class="section__titles violet">
@@ -762,9 +767,9 @@
             </div>
         </section>
         <section class="section gifts">
+            <img class="show__bg" data-rellax-percentage="0.5" src="img/show-bg-min.png" alt="">
             <div class="container">
                 <div class="section__wrap">
-                    <img class="show__bg" src="img/show-bg-min.png" alt="">
                     <div class="section__title">
                         <img class="section__title-bg section__arrow section__arrow-r" src="img/arrow-r-min.png" alt="Фон">
                         <div class="section__titles white">
@@ -1004,7 +1009,7 @@
             <img src="img/d6-min.png" alt="Иконка" class="dlc__animate dlc__item6">
             <img src="img/d7-min.png" alt="Иконка" class="dlc__animate dlc__item7">
             <img src="img/d8-min.png" alt="Иконка" class="dlc__animate dlc__item8">
-            <img src="img/popup__like-min.png" alt="Иконка" class="dlc__animate dlc__item9">
+            <img src="img/popup__like-min.png" alt="Иконка" class="dlc__animate section__item9">
             <div class="container">
                 <div class="section__wrap">
                     <div class="section__title">
@@ -1101,6 +1106,8 @@
             <img src="img/reviews-bg-min.png" alt="" class="review__bg">
             <div class="container">
                 <div class="section__wrap">
+                    <img src="img/baloon3.png" alt="" class="review__1">
+                    <img src="img/baloons3.png" alt="" class="review__2">
                     <div class="section__title">
                         <div class="section__titles violet">
                             <img class="section__title-bg section__drop section__drop-l" src="img/drop-l-min.png" alt="Фон">
@@ -1219,9 +1226,9 @@
         <section class="section about">
             <img class="about__bg" src="img/about-bg-min.png" alt="Фон">
             <img src="img/salut-min.png" alt="Иконка" class="about__animate about__item1">
-            <img src="img/garland-mono-min.png" alt="Иконка" class="about__animate about__item2">
             <img src="img/star-min.png" alt="Иконка" class="about__animate about__item3">
             <img src="img/dna-min.png" alt="Иконка" class="about__animate about__item4">
+            <img src="img/baloons4.png" alt="Иконка" class="about__animate about__item5">
             <div class="container">
                 <div class="section__wrap">
                     <div class="section__title">
@@ -1446,6 +1453,7 @@
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/rellax.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
