--- a/animators/index.html
+++ b/animators/index.html
@@ -177,7 +177,7 @@
                                             <div class="section__benefit-circle-outer">
                                                 <div class="section__benefit-mask">
                                                     <div class="section__benefit-circle">
-                                                        <img src="img/pers-min.png" alt="">
+                                                        <img src="img/pers2.png" alt="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -196,7 +196,7 @@
                                             <div class="section__benefit-circle-outer">
                                                 <div class="section__benefit-mask">
                                                     <div class="section__benefit-circle">
-                                                        <img src="img/pers-min.png" alt="">
+                                                        <img src="img/pers3.png" alt="">
                                                     </div>
                                                 </div>
                                             </div>
