--- a/cleanback/index.html
+++ b/cleanback/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/cleanback/css/fonts.css">
-    <link rel="stylesheet" href="/cleanback/css/style.css">
-    <link rel="stylesheet" href="/cleanback/css/media.css">
+    <link rel="stylesheet" href="css/twentytwenty.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Cleanback - профессиональная химчистка обуви</title>
 </head>
 <body>
@@ -23,10 +25,10 @@
                 </nav>
                 <div class="header__contacts">
                     <a href="tel:84959757763" class="header__contact">8 (495) 975-77-63</a>
-                    <a href="#" class="header__contact">Обратный звонок <img src="/cleanback/svg/phone-holding.svg" alt="svg"></a>
+                    <a href="#" class="header__contact">Обратный звонок <img src="svg/phone-holding.svg" alt="svg"></a>
                 </div>
                 <div class="header__logo">
-                    <img src="/cleanback/img/logo.png" alt="Mobile Logo">
+                    <img src="img/logo.png" alt="Mobile Logo">
                 </div>
                 <a href="#" class="header__burger"><span></span></a>
                 <div class="mobile__menu">
@@ -42,25 +44,25 @@
                     <div class="banner__body">
                         <h3 class="banner__title">Профессиональная химчистка обуви</h3>
                         <div class="banner__logo-wrap">
-                            <img src="/cleanback/img/logo.png" alt="Banner Logo" class="banner__logo">
+                            <img src="img/logo.png" alt="Banner Logo" class="banner__logo">
                         </div>
                         <div class="banner__benefits">
-                            <div class="banner__item"><img src="/cleanback/svg/package.svg" alt="svg" class="banner__svg"><span>Бесплатно заберем и доставим</span></div>
-                            <div class="banner__item"><img src="/cleanback/svg/sale-badge.svg" alt="svg" class="banner__svg"><span>Скидка 10% при сдаче от двух пар</span></div>
-                            <div class="banner__item"><img src="/cleanback/svg/clock.svg" alt="svg" class="banner__svg"><span>Срок чистки 3-4 дня</span></div>
-                            <div class="banner__item"><img src="/cleanback/svg/money-stack.svg" alt="svg" class="banner__svg"><span>Оплата после чистки</span></div>
+                            <div class="banner__item"><img src="svg/package.svg" alt="svg" class="banner__svg"><span>Бесплатно заберем и доставим</span></div>
+                            <div class="banner__item"><img src="svg/sale-badge.svg" alt="svg" class="banner__svg"><span>Скидка 10% при сдаче от двух пар</span></div>
+                            <div class="banner__item"><img src="svg/clock.svg" alt="svg" class="banner__svg"><span>Срок чистки 3-4 дня</span></div>
+                            <div class="banner__item"><img src="svg/money-stack.svg" alt="svg" class="banner__svg"><span>Оплата после чистки</span></div>
                         </div>
                         <a href="#" class="button banner__button">Заказать курьера</a>
                     </div>
                 </div>
             </div>
             <div class="banner__bg">
-                <img src="/cleanback/img/huarache.png" alt="Bg img" class="banner__img">
+                <img src="img/huarache.png" alt="Bg img" class="banner__img">
             </div>
         </div>
         <div class="container">
             <div class="banner__links">
-                <a href="#compare" class="banner__scroll banner__link"><img src="/cleanback/svg/prioritize-down.svg" alt="svg"> scroll down</a>
+                <a href="#compare" class="banner__scroll banner__link"><img src="svg/prioritize-down.svg" alt="svg"> scroll down</a>
                 <div class="banner__social">
                     <a href="#" class="banner__link">facebook</a>
                     <a href="#" class="banner__link">instagram</a>
@@ -68,7 +70,7 @@
             </div>
         </div>
         <div class="banner__abs-bg">
-            <!-- <img src="/cleanback/img/bgi.png" alt="BG"> -->
+            <!-- <img src="img/bgi.png" alt="BG"> -->
         </div>
         <div class="form__wrapper">
             <div class="form">
@@ -134,9 +136,9 @@
     <section id="compare" class="compare">
         <div id="compare-id" class="compare__slider">
             <!-- The before image is first -->
-            <img class="compare__before" src="/cleanback/img/dirty_snkr.png" />
+            <img class="compare__before" src="img/dirty_snkr.png" />
             <!-- The after image is last -->
-            <img class="compare__after" src="/cleanback/img/clear_snkr.png" />
+            <img class="compare__after" src="img/clear_snkr.png" />
         </div>
     </section>
     <section class="services">
@@ -168,10 +170,10 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker2.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="img/sneaker2.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/2.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/circle.svg" alt="figure" class="service__figure">
+                                        <img src="img/2.png" alt="sneaker" class="service__sneaker">
+                                        <img src="svg/circle.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -251,10 +253,10 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker1.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="img/sneaker1.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/1.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/star.svg" alt="figure" class="service__figure">
+                                        <img src="img/1.png" alt="sneaker" class="service__sneaker">
+                                        <img src="svg/star.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -339,10 +341,10 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker3.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="img/sneaker3.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/3.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/snake.svg" alt="figure" class="service__figure">
+                                        <img src="img/3.png" alt="sneaker" class="service__sneaker">
+                                        <img src="svg/snake.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -425,10 +427,10 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker4.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="img/sneaker4.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/4.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/red.svg" alt="figure" class="service__figure">
+                                        <img src="img/4.png" alt="sneaker" class="service__sneaker">
+                                        <img src="svg/red.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -505,10 +507,10 @@
                                     </ul>
                                     <a href="" class="button service__button">Заказать</a>
                                     <span class="service__price">4520 руб.</span>
-                                    <img src="/cleanback/img/sneaker5.png" alt="Sneaker BG" class="service__bg">
+                                    <img src="img/sneaker5.png" alt="Sneaker BG" class="service__bg">
                                     <div class="service__mobile">
-                                        <img src="/cleanback/img/5.png" alt="sneaker" class="service__sneaker">
-                                        <img src="/cleanback/svg/black.svg" alt="figure" class="service__figure">
+                                        <img src="img/5.png" alt="sneaker" class="service__sneaker">
+                                        <img src="svg/black.svg" alt="figure" class="service__figure">
                                     </div>
                                 </div>
                                 <div class="form">
@@ -590,38 +592,38 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="portfolio__item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
-                            <img src="/cleanback/img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
+                            <img src="img/huarache.png" alt="portfolio item">
                         </div>
                     </div>
                 </div>
@@ -643,14 +645,14 @@
             </div>  
         </div>
         <div class="about__bg">
-            <img src="/cleanback/img/about_bg.png" alt="About BG" class="about__img">
+            <img src="img/about_bg.png" alt="About BG" class="about__img">
         </div>
     </section>
     <footer id="footer" class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__logo">
-                    <img src="/cleanback/img/logo_w.png" alt="Logo">
+                    <img src="img/logo_w.png" alt="Logo">
                     <p>ИП Казанский Д. И. ИНН 770205752693</p>
                 </div>
                 <div class="footer__links">
@@ -684,12 +686,10 @@
         </div>
     </footer>
 
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="/cleanback/js/jquery.event.move.js" type="text/javascript"></script>
-    <script src="/cleanback/js/jquery.twentytwenty.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="css/twentytwenty.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="/cleanback/js/main.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery.event.move.js" type="text/javascript"></script>
+    <script src="js/jquery.twentytwenty.js" type="text/javascript"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
