--- a/greenway/index.html
+++ b/greenway/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/fonts/lato.css">
     <link rel="stylesheet" href="css/style.css">
@@ -249,8 +249,8 @@
             <div class="footer__wrap">
                 <div class="footer__col">
                     <h4 class="footer__title">Команда "BiznesGrand"</h4>
-                    <span class="footer__author">Профессиональное создание сайтов.</span>
-                    <a class="footer__link" href="#">Веб-студия "Вердана".</a>
+                    <span class="footer__author"></span>
+                    <a class="footer__link" href="#"></a>
                 </div>
                 <div class="footer__col">
                     <h5 class="footer__title">GREENWAY В СОЦСЕТЯХ</h5>
@@ -281,8 +281,10 @@
         </div>
     </footer>
     <script src="js/wow.min.js"></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery.inputmask.min.js"></script>
+    <script src="js/jquery.mask.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
