--- a/tanks/index.html
+++ b/tanks/index.html
@@ -20,10 +20,10 @@
                 <div class="header__menu">
                     <nav class="header__nav">
                         <ul class="header__list">
-                            <li class="header__item"><a href="#" class="header__link">Рейтинг<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Подробности<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Награды<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Вопросы<span></span></a></li>
+                            <li class="header__item"><a href="#rating" class="header__link">Рейтинг<span></span></a></li>
+                            <li class="header__item"><a href="#more" class="header__link">Подробности<span></span></a></li>
+                            <li class="header__item"><a href="#reward" class="header__link">Награды<span></span></a></li>
+                            <li class="header__item"><a href="#faq" class="header__link">Вопросы<span></span></a></li>
                         </ul>
                     </nav>
                 </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <section class="rating">
+        <section id="rating" class="rating">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header section__header_rating">Рейтинг</h2>
@@ -1399,7 +1399,7 @@
                 </div>
             </div>
         </section>
-        <section class="more">
+        <section id="more" class="more">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header section__header_more">Подробности</h2>
@@ -1434,7 +1434,7 @@
                 </div>
             </div>
         </section>
-        <section class="reward">
+        <section id="reward" class="reward">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header section__header_more">Награды</h2>
@@ -1499,7 +1499,7 @@
                 </div>
             </div>
         </section>
-        <section class="faq">
+        <section id="faq" class="faq">
             <div class="container">
                 <div class="section__header-wrap">
                     <h2 class="section__header section__header_more">Вопросы</h2>
@@ -1574,10 +1574,10 @@
                 <div class="header__menu">
                     <nav class="header__nav">
                         <ul class="header__list">
-                            <li class="header__item"><a href="#" class="header__link">Рейтинг<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Подробности<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Награды<span></span></a></li>
-                            <li class="header__item"><a href="#" class="header__link">Вопросы<span></span></a></li>
+                            <li class="header__item"><a href="#rating" class="header__link">Рейтинг<span></span></a></li>
+                            <li class="header__item"><a href="#more" class="header__link">Подробности<span></span></a></li>
+                            <li class="header__item"><a href="#reward" class="header__link">Награды<span></span></a></li>
+                            <li class="header__item"><a href="#faq" class="header__link">Вопросы<span></span></a></li>
                         </ul>
                     </nav>
                 </div>
