--- a/red_button/index.html
+++ b/red_button/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru-Ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RedButton</title>
     <!-- <script src="https://kit.fontawesome.com/f7416e1089.js" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href="./css/fonts.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
 </head>
@@ -36,10 +36,54 @@
         <section class="banner">
             <div class="container">
                 <div class="banner__wrap">
-                    <h1 class="banner__header">Сохрани свой<br>бизнес и информацию!</h1>
+                    <h1 class="section__header">Сохрани свой<br>бизнес и информацию!</h1>
                     <p class="banner__text">Помогаем <b>немедленно заблокировать серверы и рабочие места</b>, надежно закрыть доступ к данным, подать сигнал тревоги - <b>если к вам неожиданно пришли</b>...маски, шоу, проверки или любые другие форсированные мажоры!</p>
                     <button class="banner__button"><img class="button__triangle" src="./img/play_triangle.png"></button>
                     <p class="text__red banner__text banner__button-text">Нажми на кнопку, посмотри как это работает!</p>
+                </div>
+            </div>
+        </section>
+        <section id="how" class="how">
+            <div class="container">
+                <div class="section__header-wrap">
+                    <h2 class="section__header">Как это работает?</h2>
+                </div>
+                <div class="how__items">
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="./img/ico1.png" alt="Иконка" class="item__img">
+                        </div>
+                        <h3 class="item__header">Настройка сервиса</h3>
+                        <p class="item__text">Подключаете, настраиваете сервис в ЛК и устанавливаете приложение мониторинга на любой смартфон в офисе. </p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="./img/ico2.png" alt="Иконка" class="item__img">
+                        </div>
+                        <h3 class="item__header">Мониторинг подключения</h3>
+                        <p class="item__text">Мы мониторим подключение смартфона к зарядке, наличие интернета и отсутствие GSM глушилки.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="./img/ico3.png" alt="Иконка" class="item__img">
+                        </div>
+                        <h3 class="item__header">Отключили электричество</h3>
+                        <p class="item__text">Если выключат электричество и интернет, грубо ворвутся в офис с глушилкой - тревога сработает автоматически.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="./img/ico4.png" alt="Иконка" class="item__img">
+                        </div>
+                        <h3 class="item__header">Блокировка по тревоге</h3>
+                        <p class="item__text">Немедленно блокируются интернет-порты к вашим серверам по тревоге в ЦОДе, что блокирует доступ к базе.</p>
+                    </div>
+                    <div class="item">
+                        <div class="item__ico">
+                            <img src="./img/ico5.png" alt="Иконка" class="item__img">
+                        </div>
+                        <h3 class="item__header">Разблокировка сервиса</h3>
+                        <p class="item__text">Когда тревога закончится, вы или мы разблокируем все обратно по заранее согласованному индивидуальному сценарию.</p>
+                    </div>
                 </div>
             </div>
         </section>
